# HD_rag

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.codex/skills/human-design-rag-ingestion-conventions/: SKILL.md
.codex/skills/human-design-rag-module-conventions/: SKILL.md
.codex/skills/human-design-rag-phase-discipline/: SKILL.md
.codex/skills/human-design-rag-privacy-and-cost-rules/: SKILL.md
data/bodygraph_samples/: golden_labels.example.json
docs/: phase1_implementation_plan.md  phase2_implementation_plan.md
prompts/: bodygraph_raw_extraction.txt
scripts/: evaluate_bodygraph_extraction.py  extract_bodygraph.py  ingest_pdfs.py  query_kb.py
src/human_design/: __init__.py
src/human_design/rag/: __init__.py  chunking.py  config.py  embeddings.py  ingestion.py  models.py  retriever.py  vector_store.py
src/human_design/vision/: __init__.py  client.py  config.py  constants.py  evaluation.py  interpreter.py  models.py  parser.py  pipeline.py  prompt.py  validation.py
src/human_design/vision/prompts/: bodygraph_raw_extraction.txt
tests/: test_bodygraph_constants.py  test_bodygraph_evaluation.py  test_bodygraph_interpreter.py  test_bodygraph_parser.py  test_bodygraph_validation.py  test_chunking.py  test_config.py  test_embeddings.py  test_extract_bodygraph.py  test_ingest_pdfs.py  test_ingestion.py  test_models.py  test_retriever.py  test_vector_store.py  test_vision_config.py  test_vision_models.py
tests/fixtures/bodygraph/: test1_raw_response.json
